# flask_api_embedded_linux

./: .gitignore  app.c  app.py  audec2_webBoy.tar.xz  controlls.txt  fileStructure.txt  frameBufferHandler  frameBufferHandler.c  gpioController.py  image_proc.py  inputReader  inputReading.7z  mainWithArg.c  runApp.sh  socketC  socketC.c  unix_socket_server.py
client/: index.html
client/scripts/: test.js
doc/: portForward
finale/: README.txt  app.py  image_fetcher.py  image_proc.py  inputReader  runApp.sh
finale/client/styles/: style.css
gpioHandler/: CMakeLists.txt  arm-none-linux-aarch64-clang.cmake  buildInstruction  clean  native-linux-gcc.cmake
gpioHandler/doc/html/: dir_2ca85aa3edcb5344e274ce267704e268.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  menudata.js
gpioHandler/doc/html/d9/d4b/: CMakeCCompilerId_8c.html
gpioHandler/doc/html/df/d7f/: app_8c.html  app_8c_source.html
gpioHandler/doc/latex/: dir_4fef79e7177ba769987a8da36c892c5f.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  refman.tex
gpioHandler/doc/latex/df/d7f/: app_8c.tex
gpioHandler/src/: app.c
imageProc/: imageProc.py  imageProcTestRun.sh  mainWithArg.c
inputReading/: CMakeLists.txt  arm-none-linux-gnueabihf-gcc.cmake
inputReading/buid/: CMakeCache.txt  Makefile  cmake_install.cmake  inputReader
inputReading/doc/html/: annotated.html  classes.html  dir_097f9cd1724f7204c0b11f995b3d66df.html  dir_1f663de68f0b07b839a027d0568b155e.html  dir_4d4e15861eabee67850f7b2e5515b0a3.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7904d5f6dfc253f6a0fba2b152c84830.html  dir_96c1bcbd6183c03c67b3acaf865a03e9.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  menudata.js
inputReading/doc/html/d6/d14/: testEL_8c.html  testEL_8c_source.html
inputReading/doc/html/d7/dba/: structgpio__desc.html
inputReading/doc/html/d9/d4b/: CMakeCCompilerId_8c.html  CMakeCCompilerId_8c_source.html
inputReading/doc/html/da/d87/: spi_8h.html  spi_8h_source.html
inputReading/doc/html/da/d8f/: gpiolib_8c.html  gpiolib_8c_source.html
inputReading/doc/html/de/d0f/: gpiolib_8h.html  gpiolib_8h_source.html
inputReading/doc/html/de/d43/: gpioCtrl_8c.html  gpioCtrl_8c_source.html
inputReading/doc/latex/: annotated.tex  dir_1f663de68f0b07b839a027d0568b155e.tex  dir_2ca85aa3edcb5344e274ce267704e268.tex  dir_4d4e15861eabee67850f7b2e5515b0a3.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_7904d5f6dfc253f6a0fba2b152c84830.tex  dir_96c1bcbd6183c03c67b3acaf865a03e9.tex  files.tex  refman.tex
inputReading/doc/latex/d6/d14/: testEL_8c.tex
inputReading/doc/latex/d7/dba/: structgpio__desc.tex
inputReading/doc/latex/d9/d4b/: CMakeCCompilerId_8c.tex
inputReading/doc/latex/da/d87/: spi_8h.tex
inputReading/doc/latex/da/d8f/: gpiolib_8c.tex
inputReading/doc/latex/de/d0f/: gpiolib_8h.tex
inputReading/doc/latex/de/d43/: gpioCtrl_8c.tex
inputReading/src/: gpioCtrl.c  gpiolib.c  gpiolib.h
pythonToCcommunicationTest/: socketC  socketC.c  socketP.py
readingInputsProto/: CMakeLists.txt  arm-none-linux-aarch64-gcc.cmake
readingInputsProto/doc/html/: dir_4fef79e7177ba769987a8da36c892c5f.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  menudata.js
readingInputsProto/doc/html/df/d4f/: readingInputsC_8c.html  readingInputsC_8c_source.html
readingInputsProto/doc/latex/: dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  refman.tex
readingInputsProto/doc/latex/d9/d4b/: CMakeCCompilerId_8c.tex
readingInputsProto/doc/latex/df/d4f/: readingInputsC_8c.tex
readingInputsProto/src/: readingInputsC.c
screenRock5b/: CMakeLists.txt  arm-none-linux-gnueabihf-clang.cmake
screenRock5b/doc/html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  menudata.js
screenRock5b/doc/html/d0/d29/: main_8c.html  main_8c_source.html
screenRock5b/doc/html/d5/d29/: structRGB__COLOR.html
screenRock5b/doc/html/d9/d4b/: CMakeCCompilerId_8c.html
screenRock5b/doc/latex/: annotated.tex  dir_097f9cd1724f7204c0b11f995b3d66df.tex  dir_63772b626f2709090f0bdca0f40827b4.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  refman.tex
screenRock5b/doc/latex/d0/d29/: main_8c.tex
screenRock5b/doc/latex/d5/d29/: structRGB__COLOR.tex
screenRock5b/doc/latex/d9/d4b/: CMakeCCompilerId_8c.tex
screenRock5b/src/: main.c
